apps/hello/overlays/staging/patch-ingress-auth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/auth-url: |-
      https://login.joris.me/outpost.goauthentik.io/auth/hello-staging
    nginx.ingress.kubernetes.io/auth-signin: |-
      https://login.joris.me/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |-
      proxy_set_header X-Forwarded-Host $http_host;
